--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <script type="module" src="scripts/index.js" defer></script>
 </head>
 <body>
-    <div class="container" id="app"></div>
+    <div class="app container"></div>
 </body>
 </html>
