--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="index.css">
     <script type="module" src="scripts/index.js" defer></script>
 </head>
-<body>
+<body class="page">
     <div class="app container"></div>
 </body>
 </html>
